--- a/src/it/polito/tdp/libretto/Libretto.fxml
+++ b/src/it/polito/tdp/libretto/Libretto.fxml
@@ -1,7 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.libretto.LibrettoController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="it.polito.tdp.libretto.LibrettoController">
+   <top>
+      <Label text="Libretto Universitario" BorderPane.alignment="CENTER" />
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="355.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane alignment="CENTER_RIGHT">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" prefWidth="68.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="106.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="txtCodice" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtTitolo" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtDocente" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Label text="Codice" />
+                  <Label text="Titolo" GridPane.columnIndex="1" />
+                  <Label text="Docente" GridPane.columnIndex="2" />
+                  <Button fx:id="btnCerca" mnemonicParsing="false" onAction="#handleCerca" text="Cerca" textAlignment="RIGHT" GridPane.rowIndex="2" />
+                  <Button fx:id="btnInserisci" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#handleInserisci" text="Inserisci" textAlignment="RIGHT" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <TextArea fx:id="txtMessage" editable="false" prefHeight="110.0" prefWidth="355.0" />
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
